[package]
name = "nanopm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
config = "0.14.1"
env = "0.1.0"
fmt = "0.1.0"
fs_extra = "1.3.0"
itertools = "0.13.0"
serde = "1.0.214"
serde_with = "3.11.0"
substring = "1.4.5"
toml = "0.8.19"
walkdir = "2.5.0"

[build-dependencies]
winresource = "0.1.17"
