[package]
name = "nanopm"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
config = "0.15.11"
env = "1.0.1"
fmt = "0.1.0"
fs_extra = "1.3.0"
itertools = "0.14.0"
serde = "1.0.219"
serde_with = "3.12.0"
substring = "1.4.5"
toml = "0.8.22"
walkdir = "2.5.0"

[build-dependencies]
winresource = "0.1.20"
