[package]
name = "nanopm"
version = "0.2.0"
edition = "2024"
authors = ["kaweepatinn1", "aprlfm"]
repository = "https://github.com/kaweepatinn1/nanopm"
keywords = ["project-manager", "video", "production", "organization"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
walkdir = "2.5.0"
fs_extra = "1.3.0"
chrono = { version = "0.4.41", features = ["serde"] }

[build-dependencies]
winresource = "0.1.20"

[dev-dependencies]
tempfile = "3.20.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[[bin]]
name = "nanopm"
path = "src/main.rs"

[features]
default = []
bench = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true